search后台分页代码

--- a/leyou-search/src/main/resources/application.yml
+++ b/leyou-search/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     elasticsearch:
       cluster-name: my-application
       cluster-nodes: 127.0.0.1:9300
+  jackson:
+    default-property-inclusion: non_null
+
 eureka:
   client:
     service-url:
