用户模块和鉴权模块，需要测试下feign的问题

--- a/leyou-gateway/pom.xml
+++ b/leyou-gateway/pom.xml
@@ -26,6 +26,19 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+
+        <!--引入jwt相关配置-->
+        <dependency>
+            <groupId>cn.leyou.common</groupId>
+            <artifactId>leyou-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.leyou.auth</groupId>
+            <artifactId>leyou-auth-interface</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
