--- a/leyou-gateway/pom.xml
+++ b/leyou-gateway/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>leyou-auth-interface</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
