--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
         <jackson.version>2.9.7</jackson.version>
         <jwt.version>0.9.1</jwt.version>
+        <swagger.version>2.8.0</swagger.version>
 
         <leyou.latest.version>1.0.0-SNAPSHOT</leyou.latest.version>
     </properties>
@@ -108,6 +109,17 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.8.1</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
         </dependencies>
 
