--- a/leyou-upload/src/main/resources/application.yml
+++ b/leyou-upload/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://106.14.106.98:10086//eureka
   instance:
     lease-expiration-duration-in-seconds: 15
     lease-renewal-interval-in-seconds: 5
