通过docker部署了user和注册中心。

--- a/leyou-search/src/main/resources/application.yml
+++ b/leyou-search/src/main/resources/application.yml
@@ -13,8 +13,10 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://106.14.106.98:10086/eureka
     registry-fetch-interval-seconds: 10 #拉取服务列表的时间间隔
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
+    instance-id: ${spring.application.name}:${server.port}
+    prefer-ip-address: true  #当你获取host时，返回的不是主机名，而是ip
