--- a/leyou-auth/leyou-auth-service/src/main/resources/application.yml
+++ b/leyou-auth/leyou-auth-service/src/main/resources/application.yml
@@ -6,19 +6,21 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://106.14.106.98:10086/eureka
     registry-fetch-interval-seconds: 10
   instance:
     instance-id: ${spring.application.name}:${server.port}
     prefer-ip-address: true  #当你获取host时，返回的不是主机名，而是ip
-    ip-address: 127.0.0.1
+    ip-address: 106.14.106.98
     lease-expiration-duration-in-seconds: 10 #10秒不发送九过期
     lease-renewal-interval-in-seconds: 5 #每隔5秒发一次心跳
 leyou:
   jwt:
     secret: leyou@Login(Auth}*^31)&heiMa% # 登录校验的密钥
-    pubKeyPath: /Users/zhanglei745/tools/rsa/rsa.pub # 公钥地址
-    priKeyPath: /Users/zhanglei745/tools/rsa/rsa.pri # 私钥地址
+#    pubKeyPath: /Users/zhanglei745/tools/rsa/rsa.pub # 公钥地址
+#    priKeyPath: /Users/zhanglei745/tools/rsa/rsa.pri # 私钥地址
+    pubKeyPath: /home/springcloud/rsa/rsa.pub # 公钥地址
+    priKeyPath: /home/springcloud/rsa/rsa.pri # 私钥地址
     expire: 30 # 过期时间,单位分钟
     cookieName: LY_TOKEN
     cookieMaxAge: 30
