--- a/leyou-user/leyou-user-service/pom.xml
+++ b/leyou-user/leyou-user-service/pom.xml
@@ -77,7 +77,10 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
